[gd_scene load_steps=8 format=3 uid="uid://1w7dog5an4ks"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_b165b"]
[ext_resource type="PackedScene" uid="uid://dvnu5ibtywa8k" path="res://node prefabs/Hud.tscn" id="2_jx42u"]
[ext_resource type="Texture2D" uid="uid://cxsn6uvb71n82" path="res://sprites/characters_packed.png" id="3_6q1kk"]
[ext_resource type="Script" path="res://Physics/WaterDetection.gd" id="4_fcdoj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d4mf4"]
atlas = ExtResource("3_6q1kk")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_d36jg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4mf4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1uk5q"]
size = Vector2(12, 21)

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 5
script = ExtResource("1_b165b")

[node name="HUD" parent="." instance=ExtResource("2_jx42u")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_d36jg")
animation = &"Idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_1uk5q")

[node name="WaterDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("4_fcdoj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterDetection"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_1uk5q")

[node name="Node2D" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Node2D"]
position = Vector2(16, 0)

[connection signal="body_entered" from="WaterDetection" to="WaterDetection" method="_on_body_entered"]
[connection signal="body_exited" from="WaterDetection" to="WaterDetection" method="_on_body_exited"]
[connection signal="water_state_changed" from="WaterDetection" to="." method="_on_water_detection_water_state_changed"]
